# thread-performance-demonstration

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: constants.c.A1E482F5DBA0609B.idx  constants.h.69BE7F2C1830D51E.idx  integers.h.2D346ECDC6D164A6.idx  main.c.DCB3C3F533389A5C.idx  populate.c.0C7403EB86144E8D.idx  populate.h.D234AF70DF83211A.idx  sum.c.4C8D1840BAC62718.idx  sum.h.331FE08BF004DEF2.idx  threads.c.C2C1D628E82CEA8C.idx  threads.h.A60FED9E98FA7B0C.idx
include/: constants.h  integers.h  populate.h  sum.h  threads.h
src/: constants.c  main  main.c  populate.c  sum.c  threads.c
src/constants/: constants.c
src/threads/: threads.c  threads.h
